# ai-langchain-lab

./: README.md
backend/: pyproject.toml  uv.config.txt
backend/src/: dev.py  main.py
backend/src/api/health/: healthcheck.py
backend/src/api/v1/: api_v1.py
backend/src/api/v1/chat/: chat.py
backend/src/api/v1/message/: message.py
backend/src/features/chat/: dependencies.py
backend/src/features/chat/repositories/: __init__.py  chat_model.py  chat_repository.py
backend/src/features/chat/schemas/: __init__.py  chat_schemas.py
backend/src/features/chat/services/: __init__.py  chat_service.py
backend/src/features/message/: __init__.py  dependencies.py
backend/src/features/message/repositories/: __init__.py  message_model.py  message_repository.py
backend/src/features/message/schemas/: __init__.py  message_schemas.py
backend/src/features/message/services/: __init__.py  message_service.py
backend/src/providers/db/: __init__.py  db.py  models_registry.py
backend/src/shared/config/: config.py
backend/src/shared/enums/: __init__.py  shared_enums.py
backend/src/shared/schemas/: common_schemas.py
docker/: docker-compose.yml  setup.sh
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/c/[chatId]/: page.tsx
frontend/src/core/components/: HomePage.tsx
frontend/src/core/components/chat/: NewChatView.tsx  types.ts
frontend/src/shared/: index.ts
frontend/src/shared/config/: baseAppsUrls.ts
frontend/src/shared/utils/: customStyles.ts  function.ts  metadata.ts  types.ts
(+27 files in other folders)
