[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
dev = "src.dev:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
